--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
+<mat-toolbar color="primary">
+  <span>Application Formation Angular</span>
+</mat-toolbar>
+
 <div class="content" role="main">
   <!-- interpolation -->
   <p>{{ title }} app is running!</p>
