--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,4 @@
-<mat-toolbar color="primary">
-  <span>Application Formation Angular</span>
-</mat-toolbar>
-
+<app-header></app-header>
 <div class="content" role="main">
   <!-- interpolation -->
   <p>{{ title }} app is running!</p>
