--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,61 +1,5 @@
 <app-header></app-header>
-<div class="content" role="main">
-  <!-- interpolation -->
-  <p>{{ title }} app is running!</p>
-  <p>condition dans interpolation : {{ title.length > 5 ? "plus de 5 lettres" : "moins de 5 lettres" }}</p>
 
-  <!-- pipe -->
-<p>{{name | uppercase}}</p>
-<p>sans pipe : {{today}}</p>
-<p>avec pipe : {{today | date : "longDate" | uppercase}}</p>
-
-<p>avec custom pipe : {{ 2 | exponentialStrength : 10}}</p>
-
-<!-- classic interpolation -->
-<img src="{{imgUrl}}" alt="some image">
-
-<!-- dynamic properties == properties binding avec les []-->
-<img [src]="imgUrl" [alt]="name" [attr.data-name]="name" [attr.blabla]="name" >
-
-<!-- event binding (event-name)="methode()"  $event est facultatif-->
-<button type="button" (click)="clickMethod($event)">Cliquez</button>
-<p>
-<button type="button" (click)="toggleState()">switch du state</button>
-<button [disabled]="state" type="button" (click)="toggleState()">le state est : {{state}}</button>
-</p>
-
-<!-- classes -->
-<!-- peut également etre une expression/ condition -->
-
-<p [ngClass]="{disabled: state, otherClass: true}">quelques classes</p>
-
-<!-- display none mais visible dans le DOM : plus performant qu'un ngIf -->
-<p [hidden]="!state">quelques classes</p>
-
-<!-- directive if -->
-<!-- display none mais disparu du DOM-->
-<p *ngIf="state else other"> Je suis le if</p>
-
-<ng-template #other><p>je suis le else</p></ng-template>
-
-
-
-  <!-- Highlight Card -->
-  <div class="card highlight-card card-small">
-
-    <svg id="rocket" xmlns="http://www.w3.org/2000/svg" width="101.678" height="101.678" viewBox="0 0 101.678 101.678">
-      <title>Rocket Ship</title>
-      <g id="Group_83" data-name="Group 83" transform="translate(-141 -696)">
-        <circle id="Ellipse_8" data-name="Ellipse 8" cx="50.839" cy="50.839" r="50.839" transform="translate(141 696)" fill="#dd0031"/>
-        <g id="Group_47" data-name="Group 47" transform="translate(165.185 720.185)">
-          <path id="Path_33" data-name="Path 33" d="M3.4,42.615a3.084,3.084,0,0,0,3.553,3.553,21.419,21.419,0,0,0,12.215-6.107L9.511,30.4A21.419,21.419,0,0,0,3.4,42.615Z" transform="translate(0.371 3.363)" fill="#fff"/>
-          <path id="Path_34" data-name="Path 34" d="M53.3,3.221A3.09,3.09,0,0,0,50.081,0,48.227,48.227,0,0,0,18.322,13.437c-6-1.666-14.991-1.221-18.322,7.218A33.892,33.892,0,0,1,9.439,25.1l-.333.666a3.013,3.013,0,0,0,.555,3.553L23.985,43.641a2.9,2.9,0,0,0,3.553.555l.666-.333A33.892,33.892,0,0,1,32.647,53.3c8.55-3.664,8.884-12.326,7.218-18.322A48.227,48.227,0,0,0,53.3,3.221ZM34.424,9.772a6.439,6.439,0,1,1,9.106,9.106,6.368,6.368,0,0,1-9.106,0A6.467,6.467,0,0,1,34.424,9.772Z" transform="translate(0 0.005)" fill="#fff"/>
-        </g>
-      </g>
-    </svg>
-
-
-  </div>
-
+<div class="content">
+  <router-outlet></router-outlet>
 </div>
-<router-outlet></router-outlet>
